2003-08-25  Chris Demetriou  <cgd@broadcom.com>

	* configure.tgt: Document need for special "mipsisa64" handling.
	(mipsisa64*-*-linux64): Handle as target linux64.
	(mipsisa64*-*-*): Handle as target embed64.

2003-08-18  Michael Chastain  <mec@shout.net>

	* PROBLEMS: Document pr gdb/1322, the Java anonymous
	objfile bug.

2003-08-22  Michael Chastain  <mec@shout.net>

	* config/djgpp/fnchange.lst: Remove gdb/testsuite/gdb.c++/*.
	Add lines for files in gdb/testsuite/gdb.cp/* that are
	still not 8.3 unique.

2003-08-22  Daniel Jacobowitz  <drow@mvista.com>

	* gnu-v3-abi.c (gnuv3_baseclass_offset): Check whether
	TYPE_VPTR_FIELDNO is valid.

2003-08-22  Daniel Jacobowitz  <drow@mvista.com>

	From mainline:
	2003-08-17  Daniel Jacobowitz  <drow@mvista.com>
	* linux-nat.c (PTRACE_O_TRACEVFORKDONE, PTRACE_O_TRACEEXIT): Define.
	(PTRACE_EVENT_VFORKDONE, PTRACE_EVENT_EXIT): Define.
	(linux_parent_pid, linux_supports_tracevforkdone_flag): New variable.
	(linux_test_for_tracefork): Set linux_supports_tracevforkdone_flag.
	(linux_supports_tracevforkdone): New function.
	(linux_enable_event_reporting): Enable TRACEVFORK, TRACEEXEC, and
	TRACEVFORKDONE.
	(child_follow_fork): Handle vfork.
	(linux_handle_extended_wait): Likewise.  Also handle exec.
	(child_insert_vfork_catchpoint, child_insert_exec_catchpoint): Enable.
	* NEWS: Mention fork tracing.

2003-08-18  Andrew Cagney  <cagney@redhat.com>

	* gdbarch.sh (FRAME_RED_ZONE_SIZE): New architecture method.
	* gdbarch.h, gdbarch.c: Re-generate.
	* infcall.c (call_function_by_hand): Adjust the SP by
	frame_red_zone_size before allocating any stack space.
	* rs6000-tdep.c (rs6000_gdbarch_init): Set "frame_red_zone_size".
	* x86-64-tdep.c (x86_64_frame_align): New function.
	(x86_64_init_abi): Set "frame_red_zone_size" and "frame_align".

	* x86-64-tdep.c (x86_64_push_arguments): Revert 2003-08-07 change.
	Remove code adjusting SP so that it skips over the Red Zone.

2003-08-18  Mark Kettenis  <kettenis@gnu.org>
